# dropstick

./: Cargo.toml  README.md
.cargo/: config.toml
src/: clock_init.rs  core0_main.rs  core1.rs  core1_main.rs  main.rs  player.rs
src/core1/: ui.rs
src/core1/ui/: menu.rs  screen.rs
src/core1/ui/menu/: main_menu.rs  settings_menu.rs  song_menu.rs
src/player/: wav.rs  wav_streaming.rs
