[package]
name = "dropstick"
edition  = "2021"
version = "0.0.1"

[dependencies]
rp2040-hal     = {version = "0.7.0", features = ["rt"] }
rp2040-boot2   = "0.2.1"
cortex-m       = {version = "0.7.2", features = ["critical-section-single-core"] }
cortex-m-rt    = "0.7.3"
embedded-alloc = "0.5.0"
embedded-hal   = {version = "0.2.5", features = ["unproven"] }

fugit = "0.3.7"

defmt       = "1.0.1"
defmt-rtt   = "1.0.0"
panic-probe = "1.0.0"
critical-section = "1.2.0"

[profile.release]
debug = 2
