[package]
name = "dropstick"
edition  = "2021"
version = "0.0.1"

[dependencies]
rp2040-hal     = {version = "0.11.0", features = ["rt", "critical-section-impl"] }
rp2040-boot2   = "0.3.0"
cortex-m       = "0.7.2"
cortex-m-rt    = "0.7.3"
embedded-alloc = "0.5.0"
embedded-hal   = "1.0.0"
embedded-hal-bus = "0.3.0"

fugit = "0.3.7"

defmt       = "1.0.1"
defmt-rtt   = "1.0.0"
panic-probe = "1.0.0"

critical-section = "1.2.0"

embedded-sdmmc = {version = "0.9.0", default-features = false, features = ["defmt-log"] }

ssd1306 = "0.10.0"
embedded-graphics = "0.8.1"

[profile.release]
debug = 2
